--- a/mythesis.tex
+++ b/mythesis.tex
@@ -81,7 +81,7 @@
 \def\thetas{\theta_{s}}
 \def\tstep{\mathsf{t}}
 \def\bolo{\mathrm{B}}
-\def\ene{\mathrm{E}}
+\def\ene{E}%\mathrm{E}}
 \def\lratio{\mathcal{R}}
 %###
 
@@ -1262,7 +1262,7 @@ In our simulations we see how the two datasets with different $i-\thetas$ soluti
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=synt_sax_pol2.png,width=17.0cm}}
-\caption{Synthetic data: Normalized number fluxes as a function of the phase at different energies for $i = 75 \deg$ and $\thetas = 5 \deg$. The phase is from $0$ to $1$. Other parameters are shown in Table \ref{table:params}.
+\caption{Synthetic data: Normalized number fluxes as a function of the phase at different energies for $i = 75 \degree$ and $\thetas = 5 \degree$. The phase is from $0$ to $1$. Other parameters are shown in Table \ref{table:params}.
 \label{fig:syntpol2}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1271,7 +1271,7 @@ In our simulations we see how the two datasets with different $i-\thetas$ soluti
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=synt_sax_eq2.png,width=17.0cm}}
-\caption{Synthetic data: Normalized number fluxes as a function of the phase at different energies for $i = 5 \deg$ and $\thetas = 75 \deg$. The phase is from $0$ to $1$. Other parameters are shown in Table \ref{table:params}.
+\caption{Synthetic data: Normalized number fluxes as a function of the phase at different energies for $i = 5 \degree$ and $\thetas = 75 \degree$. The phase is from $0$ to $1$. Other parameters are shown in Table \ref{table:params}.
 \label{fig:synteq2}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
