--- a/mythesis.tex
+++ b/mythesis.tex
@@ -873,7 +873,7 @@ Thanks to the observed AMXPs (e.g., \source \ \cite{poutagierlinskisax}) we know
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=spectrum_numflux0.pdf,width=12.0cm}}
-\caption{The two-component power-law compared to the reference blackbody at $2$ keV temperature. The spectra are calculated using the time-averaged fluxes at different energies of the pulse profile model with some physical parameters. 
+\caption{The two-component power-law energy spectrum compared to the reference blackbody at $2$ keV temperature. The spectra are calculated using the time-averaged fluxes at different energies of the pulse profile model with some physical parameters. 
 \label{fig:spectrum}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -900,7 +900,7 @@ contain the pulsar phase $\phi$ expressed in $\cos\sigma$. However, we should re
 %The delay is caused by different travel times of emitted
 %photons to the observer, depending on the position of the emitting spot.
 
-The different light travel times in Schwarzschild metric may be calculated and subtracted to get the time delay between the photon from the point of interest and a photon from a reference point (we call this the reference photon). We choose the reference point to locate at a reference radius $r_{\mathrm{ref}}$ from the center of the star (it can be chosen arbitrarily as long as it exceeds $\rg$) and assume that the reference photon is emitted exactly to the radial direction (meaning that $\alpha$ = 0 and thus impact parameter $b = 0$). Now a photon following the trajectory with an impact parameter $b$ (and $\alpha < \pi/2$) is lagging the reference photon by 
+The different light travel times in Schwarzschild metric may be calculated and subtracted to get the time delay between the photon from the point of interest and a photon from a reference point (we call this the reference photon). We choose the reference point to locate at the reference radius $r_{\mathrm{ref}}$ from the center of the star (it can be chosen arbitrarily as long as it exceeds $\rg$) and assume that the reference photon is emitted exactly to the radial direction (meaning that $\alpha$ = 0 and thus impact parameter $b = 0$). Now a photon following the trajectory with an impact parameter $b$ (and $\alpha < \pi/2$) is lagging the reference photon by 
 %A photon following the trajectory with an impact parameter $b$ (and $\alpha < \pi/2$)
 %is lagging the photon originating from a reference radius $r_{\mathrm{ref}}$ (which %can be chosen arbitrarily as long as it exceeds $\rg$) with $b=0$ by 
 %(Pechenick et al. \cite{pechenick})%\citep{pfc83}:
@@ -934,7 +934,7 @@ c\Delta t(R,\alpha)= 2c\Delta t_{s}(p,\pi/2)-c\Delta t_{s}(R,\pi-\alpha)\\+2\lef
 
 The integral in equation (\ref{eq:delayint}) is not very easy to solve numerically. That is why we use again the variable substitution $x = \sqrt{1-R/r}$ before using Simpson quadrature. We also make a grid of time delays corresponding to different $\alpha$ and $R$, which we later interpolate linearly in order to make the code run faster.
 
-We are now able to compute the bending angle $\psi$, the emission angles $\alpha$ and $\sigma$, and the impact parameter $b$ using equations (\ref{eq:bend2}), (\ref{eq:impact2}), and (\ref{eq:cossigma2}) for a given pulsar phase $\phi$. The corresponding delays $\Delta t(R,\alpha)$   we can find using formulae (\ref{eq:delay2}) or (\ref{eq:delay22}). When these time delays are known, we compute the delays expressed in phase with 
+We are now able to compute the bending angle $\psi$, the emission angles $\alpha$ and $\sigma$, and the impact parameter $b$ using equations (\ref{eq:bend2}), (\ref{eq:impact2}), and (\ref{eq:cossigma2}) for a given pulsar phase $\phi$. The corresponding delays $\Delta t(R,\alpha)$   we can find using formulae (\ref{eq:delay2}) and (\ref{eq:delay22}). When these time delays are known, we compute the delays expressed in phase with 
 %For a given pulsar phase $\phi$, we compute angle $\psi$, then
 %we find the corresponding emitted $\alpha$, $\sigma$ and the impact parameter $b$
 %using  formulae (\ref{eq:bend2}), (\ref{eq:impact2}) and (\ref{eq:cossigma2}), and
@@ -984,7 +984,7 @@ In the model in this thesis we assumed a spherically symmetric spot (the angle m
 
 \subsubsection{Comparison of the profiles}
 
-The new versions of the waveform code have been tested by comparing the pulse profiles to profiles obtained from other theoretical models or from a similar model developed by other groups. In all comparisons we assume the neutron star to be at distance $D = 10$ kpc. In the case of spherical star we have checked that the new version gives the same results as the old one (which assumed spherical star and has been shown to give accurate results). 
+The new versions of the waveform code have been tested by comparing the pulse profiles to profiles obtained from other theoretical models or from a similar model developed by other groups. In all comparisons we assume the neutron star to be at distance $D = 10$ kpc. In the case of spherical star we have checked that the new version gives the same results as the old one (which assumed a spherical star and has been shown to give accurate results). 
 
 In the case of oblate star we have compared our light curves to those obtained by Morsink \cite{morsink} and Cadeau \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($\req = 16.4$ km, $M = 1.4$  $\msun$, $\nu = 600$ Hz, and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with the function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3}, and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In the Figure \ref{fig:mor3} ($\thetas = 49 \degree$ and $i = 70 \degree$) and in the Figure \ref{fig:cad4} ($\thetas = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar and only photons with high bending angles can reach the observer. Instead in the Figure \ref{fig:cad3} ($\thetas = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
 
@@ -1017,8 +1017,8 @@ In the case of oblate star we have compared our light curves to those obtained b
 
 
 The profiles of pulsars have also been compared to profiles obtained from full ray tracing method (figures \ref{fig:jpulse1}, \ref{fig:jpulse2}, and \ref{fig:jpulse3}), which show very similar results. %correspond each other well. 
-The number fluxes at $2$, $6$, and $12$ keV energies, along with the bolometric number flux, are computed to both spherical ($R(\thetas) = \req$) and oblate stars ($R(\thetas)$ from equation \ref{rtheta2}). Angular distribution of radiation corresponds either to a blackbody with isotropic beaming (noted as "blackbody") or to a Hopf profile. %so some power-law or what is the energy-dependence then....?
-In the case of spherical star ($\req = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \degree$, $i = 60 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we compute the light curves with two different spinning frequencies ($\nu = 1$ Hz and $\nu = 400$ Hz) and with the spot size $\rho = 1 \degree$ or $30 \degree$ (figures \ref{fig:jpulse1} and \ref{fig:jpulse2}). In the case of oblate star ($\req = 12$ km, $M = 1.4  ~\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we show the light curves with three different spot colatitudes $\thetas  = 18 \degree$,   $45 \degree$, and $90 \degree$ for the isotropic blackbody along with $\thetas = 45 \degree$ and Hopf profile.
+The number fluxes at $2$, $6$, and $12$ keV energies, along with the bolometric number flux, are computed to both spherical ($R(\theta) = \req$) and oblate stars ($R(\theta)$ from equation \ref{rtheta2}). Angular distribution of radiation corresponds either to a blackbody with isotropic beaming (noted as "blackbody") or to a Hopf profile. %so some power-law or what is the energy-dependence then....?
+In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \degree$, $i = 60 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we compute the light curves with two different spinning frequencies ($\nu = 1$ Hz and $\nu = 400$ Hz) and with the spot size $\rho = 1 \degree$ or $30 \degree$ (figures \ref{fig:jpulse1} and \ref{fig:jpulse2}). In the case of oblate star ($\req = 12$ km, $M = 1.4  ~\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we show the light curves with three different spot colatitudes $\thetas  = 18 \degree$,   $45 \degree$, and $90 \degree$ for the isotropic blackbody, along with $\thetas = 45 \degree$ and Hopf profile.
 
 
 %Show here some profiles..
@@ -1028,7 +1028,7 @@ In the case of spherical star ($\req = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=jpulsec1.pdf,width=17.0cm}}
-\caption{The light curve (monochromatic number fluxes at $2$, $6$, and $12$ keV along with bolometric number flux) comparisons with slowly rotating spherical star ($\req = 12$ km, $M = 1.6$ $\msun$, $\nu = 1$ Hz, $i = 60 \degree$, $\thetas = 50 \degree$, and $T_{\mathrm{eff}} = 2$ keV) emitting according to isotropic blackbody law or Hopf profile with spot size either $1$ or $30$ degrees. Black solid line shows the pulse profiles computed using the method described in this thesis (S+D) and red dashed line is a profile computed with the full ray tracing method (FRTM). The residuals are shown in the lower panel as $\Delta = (\mathrm{model}_{\mathrm{S+D}}/\mathrm{model}_{\mathrm{FRTM}})*100$ \%. Figure from Nättilä \& Pihajoki 2016 (in preparation).
+\caption{The light curve (monochromatic number fluxes at $2$, $6$, and $12$ keV along with bolometric number flux) comparisons with slowly rotating spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\nu = 1$ Hz, $i = 60 \degree$, $\thetas = 50 \degree$, and $T_{\mathrm{eff}} = 2$ keV) emitting according to isotropic blackbody law or Hopf profile with spot size either $1$ or $30$ degrees. Black solid line shows the pulse profiles computed using the method described in this thesis (S+D), and red dashed line is a profile computed with the full ray tracing method (FRTM). The residuals are shown in the lower panel as $\Delta = (\mathrm{model}_{\mathrm{S+D}}/\mathrm{model}_{\mathrm{FRTM}})*100\%$. Figure from Nättilä \& Pihajoki 2016 (in preparation).
 \label{fig:jpulse1}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1089,7 +1089,7 @@ p(X_{\tstep +1} = x|X_{\tstep}. . . X_{1}) = p(X_{\tstep +1} = x|X_{\tstep}).
 So generally we can conclude that a Markov chain is a random walk with Markov property.
  
 The Metropolis algorithm works by taking an arbitrary move near the current
-point in the sequence. If $X_{\tstep}$ is the sample at time $\tstep$, then the new sample Y is proposed from the proposal distribution $q(Y|X_{\tstep})$. In the original Metropolis algorithm this distribution must be symmetric, meaning that $q(X_{\tstep}|Y)$ = $q(Y|X_{\tstep})$. However, in Metropolis-Hastings algorithm it may be non-symmetric. The likelihood of the new sample is then in both cases compared to that of the previous sample. The likelihood ratio $\lratio$ between the two states is calculated from the following equation \cite{tuomi}:
+point in the sequence. If $X_{\tstep}$ is the sample at time $\tstep$, then the new sample Y is proposed from a proposal distribution $q(Y|X_{\tstep})$. In the original Metropolis algorithm this distribution must be symmetric, meaning that $q(X_{\tstep}|Y)$ = $q(Y|X_{\tstep})$. However, in Metropolis-Hastings algorithm it may be non-symmetric. The likelihood of the new sample is then in both cases compared to that of the previous sample. The likelihood ratio $\lratio$ between the two states is calculated from the following equation \cite{tuomi}:
 \be \label{eq:likely_ratio} 
 \lratio= \frac{p(Y|\mathcal{D})q(X_{\tstep}|Y)}{p(X_{\tstep}|\mathcal{D})q(Y|X_{\tstep})}.
 \ee
@@ -1101,7 +1101,7 @@ The next step is to decide whether the likelihood ratio is high enough in order 
 %If the probability distribution function (PDF) has greater value at that point, then the walk always moves there. If the PDF has a smaller value, then the move is accepted with probability dependent on how much less likely.
 
 It may be noticed that the acceptance rule simplifies significantly when the
-proposal density is indeed symmetric ($q(X_{\tstep}|Y)$=$q(Y|X_{\tstep})$). The algorithm is typically repeated until the obtained chains are long enough in the sense that their statistics do not change considerably when adding new members to the chain. The statistical representativeness of the sample can be verified
+proposal density is indeed symmetric ($q(X_{\tstep}|Y) = q(Y|X_{\tstep})$). The algorithm is typically repeated until the obtained chains are long enough in the sense that their statistics do not change considerably when adding new members to the chain. The statistical representativeness of the sample can be verified
 %Whether the obtained samples are statistically representative of the posterior can be verified 
 if multiple chains with different initial states result in the same posterior density. It is also necessary to remove the so-called initial warm-up period ("burn-in") %perhaps tens of thousands of the first iterations ("burn-in"),
 since the probability distribution has not yet converged in that case. %those. 
@@ -1141,7 +1141,7 @@ where $\epsilon_{c}$  is a constant. Metropolis (like many other MCMC strategies
 \subsubsection{Ensemble sampler}
 
 The affine invariant ensemble sampler is a novel MCMC method developed a few years ago \cite{ensemble1}. %(Goodman and Weare, 2010 \cite{ensemble1}). 
-The algorithm has a similar structure to Metropolis scheme and still uses a proposal and accept/reject step. But instead of only one sequence $X_{1}...X_{\tstep}$, we use now a group or ensemble of sequences. Each member of the group is called a walker. On each iteration the algorithm generates a new sample for every walker using the  current positions of all of the other walkers in
+The algorithm has a similar structure to Metropolis scheme and still uses a proposal and accept/reject step. But instead of only one sequence $X_{1}...X_{\tstep}$, we use now a group or ensemble of sequences. Each member of the group is called a walker. On each iteration the algorithm generates a new sample for every walker using the  current positions of all the other walkers in
 the ensemble. However, each walker is independent of the other walkers. They are correlated only with the previous states of the other walkers and their own previous state. After burn-in the distribution of each walker should be converged to the invariant posterior probability distribution.
 
 %each walker is also distributed according to the invariant posterior probability distribution.
@@ -1220,14 +1220,14 @@ A \approx \frac{(1-\rg/R)\sin i \sin \thetas}{\rg/R+(1-\rg/R)\cos i \cos \thetas
 
 We see that $i$ and $\thetas$ can be changed in the equation (\ref{eq:amplitude_incthet}) without affecting the amplitude. The exact calculation shows also only a small difference between these two parameters. Thus we have created two identical synthetic datasets which differ only in $i$ and $\thetas$. We call them datasets for polar and equatorial spots even though the spots are not exactly at the pole or equator. 
 
-The datasets have been generated using our pulse profile model. Since the observed data always includes noise, we want to have it also in our synthetic data. For this reason a different random number, from a normal distribution with mean equal to zero, is added to the original flux at each phase point. The average size of this random number have been chosen to match closely the known errors of the \source \ data. Thus a relatively larger noise has been added to the highest energy channels where the count rates are lowest. The normalized synthetic spectral fluxes and their errors (amount of noise added) are shown in the Figures \ref{fig:syntpol2} and \ref{fig:synteq2}.
+The datasets have been generated using our pulse profile model. Since the observed data always includes noise, we want to have it also in our synthetic data. For this reason a different random number, from a normal distribution with mean equal to zero, is added to the original flux at each phase point. The average size of this random number have been chosen to match closely the known errors of the \source \ data. Thus a relatively larger noise has been added to the highest energy channels where the count rates are lowest. The normalized synthetic spectral fluxes and their errors (amount of noise added) are shown in Figures \ref{fig:syntpol2} and \ref{fig:synteq2}.
 
 
 %They have been created using the pulse profile model and adding random Gaussian noise %to the fluxes for every phase point. A larger noise was added to the highest energy %channels. 
 
 
 
-In our simulations we see how the two datasets with different $i-\thetas$ solutions can be separated from each other at least with help of the polarization information giving constraints to $i$ to $\thetas$. We also show their effect on the constraints of mass and radius which are our parameters of interest. 
+In our simulations we see how the two datasets with different $i-\thetas$ solutions can be separated from each other at least with help of the polarization information giving constraints to $i$ and $\thetas$. We also show their effect on the constraints of mass and radius which are our parameters of interest. 
 
 
 
@@ -1296,7 +1296,7 @@ p(F_{\mathrm{data}}|F_{\mathrm{model}}) \propto \exp \left (\frac{-(F_{\mathrm{d
 \ee
 Normalization is not needed since it will cancel out when calculating likelihood ratios. The total probability density of the data given the sample is the product of $p(F_{\mathrm{data}}|F_{\mathrm{model}})$ from each phase point and at each energy (or the sum of log-probabilities). 
 
-Of course we also need to take into account that we have different phase shift in the data and in the model. For that reason we calculate the model with five times higher phase resolution than the model. We calculate the probability densities using equation (\ref{eq:gaussprob}) with different phase shifts in order to marginalize over the uncertainty of phase shift. % using all the possible different phase shifts by shifting the values of fluxes in a correct way. 
+Of course we also need to take into account that we have different phase shift in the data and in the model. For that reason we calculate the model with five times higher phase resolution than the resolution of the data. We calculate the probability densities using equation (\ref{eq:gaussprob}) with different phase shifts in order to marginalize over the uncertainty of phase shift. % using all the possible different phase shifts by shifting the values of fluxes in a correct way. 
 The total probability $p(\mathcal{D}|\textbf{y})$ (which will be used to calculate the likelihood ratio given by equation \ref{eq:likely_ratio_smove}) is the marginalized probability over all phase shifts. 
 
 As a first step we assume that all the prior probabilities of the parameters ($p(\textbf{y})$) are uniform so that equations (\ref{eq:bayes}) and (\ref{eq:likely_ratio_smove}) give 
@@ -1309,7 +1309,7 @@ As a second step we make the prior probabilities of inclination and spot colatit
 \lratio = Z^{N-1}\frac{p(D|Y)p(Y)}{p(D|X_{t})p(X_{\tstep})}.
 \ee
 
-It is not obvious what kind of prior probabilities one should use. It depends on how informative constraints we are able to get from the observations to the given parameter. Unlike in the case of the usual flux, the measured polarization differ significantly if $i$ and $\thetas$ are switched \cite{poutaviironen}. Thus from modeling the polarization we can get the prior probability distributions to these parameters. In this thesis we choose to use normally distributed prior probabilities for $i$ and $\thetas$ around $0 \degree$ or $90 \degree$ to study the effect on the posterior probabilities of mass and radius. The standard deviations for these priors are chosen to be $15 \degree$. 
+It is not obvious what kind of prior probabilities one should use. It depends on how informative constraints we are able to get from the observations to the given parameter. Unlike in the case of the usual flux, the measured polarization differ significantly if $i$ and $\thetas$ are switched \cite{poutaviironen}. Thus from modeling the polarization we can get the prior probability distributions for these parameters. In this thesis we choose to use normally distributed prior probabilities for $i$ and $\thetas$ around $0 \degree$ or $90 \degree$ to study the effect on the posterior probabilities of mass and radius. The standard deviations for these priors are chosen to be $15 \degree$. 
 
 Other prior probabilities of the parameters are kept always uniform inside their sampling intervals. The sizes of these intervals are the same as the sizes of the corresponding axes in the posterior probability Figures in the next section. 
 
@@ -1329,12 +1329,12 @@ Other prior probabilities of the parameters are kept always uniform inside their
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=weights_example.pdf,width=12.0cm}}
-\caption{Log-likelihoods after the burn-in has been removed in one ensemble.
+\caption{Log-likelihoods of one ensemble as a function of steps after the burn-in has been removed.
 \label{fig:wexample}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Before obtaining the final posterior probability distributions we have reduced the burn-in phase from each ensemble by removing the first $20 000$ samples from each chain. After that we still have approximately $50 000$ samples left belonging to each ensemble.  Figure \ref{fig:wexample} shows one example of the log-likelihoods of a converged chain in one of the simulations. In that Figure we use an averaged step of ensemble which is an average of $20$ (number of walkers in the ensemble) consecutive single accepted steps. However, for many ensembles we found few walkers which didn't seem to achieve convergence even after a long time (they appeared as sharp peaks in the log-likelihood plots).
+Before obtaining the final posterior probability distributions we have reduced the burn-in phase from each ensemble by removing the first $20,000$ samples from each chain. After that we still have approximately $50,000$ samples left belonging to each ensemble.  Figure \ref{fig:wexample} shows one example of the log-likelihoods of a converged chain in one of the simulations. In that Figure we use an averaged step of ensemble which is an average of $20$ (number of walkers in the ensemble) consecutive single accepted steps. However, for many ensembles we found few walkers which didn't seem to achieve convergence even after a long time (they appeared as sharp peaks in the log-likelihood plots).
 
 The same averaged steps are also used in Figure \ref{fig:acexample} where we show an example of the autocorrelation. The autocorrelations of all the six ensembles from one simulation are presented using the weights as observables (see equation \ref{eq:autocovariance}). The Figure shows the autocorrelation only approximatively since one should make sure that the ensemble averaged weights are calculated for walkers being at a same state of their sequence. We may, however, see that in general the correlation is not very strong, and we have reduced it by taking every fifth sample from the chain.%... Thinning we used is .... (TBD)  
 
@@ -1366,33 +1366,33 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
      \multicolumn{6}{c}{Polar spot with only uniform priors} \\ %\hline
       Radius $\req$ (km) & $8.1$ & $8.3$ & $9.0$ & $12.4$ & $13.8$  \\ %\hline
       Mass $M$ ($\msun$) & $1.0$ & $1.1$ & $1.2$ & $1.6$ & $1.7$  \\ %\hline
-      Inclination $i$ ($\degree$) & $3.2$ & $3.4$ & $6.2$ & $62.7$ & $77.1$ \\ %\hline
-      Spot colatitude $\thetas$ ($\degree$) & $3.3$ & $3.4$ & $6.8$ & $70.8$ & $76.2$ \\ %\hline
-      Spot angular size $\rho$ ($\degree$) & $6.8$ & $8.3$ & $9.8$ & $11.2$ & $12.7$ \\ %\hline
+      Inclination $i$ ($\deg$) & $3.2$ & $3.4$ & $6.2$ & $62.7$ & $77.1$ \\ %\hline
+      Spot colatitude $\thetas$ ($\deg$) & $3.3$ & $3.4$ & $6.8$ & $70.8$ & $76.2$ \\ %\hline
+      Spot angular size $\rho$ ($\deg$) & $6.8$ & $8.3$ & $9.8$ & $11.2$ & $12.7$ \\ %\hline
       Distance $D$ (kpc) & $2.1$ & $2.2$ & $2.5$ & $3.0$ & $3.0$ \\   \hline
       
       \multicolumn{6}{c}{Polar spot with non-uniform $i$ and $\thetas$ priors} \\ %\hline
       Radius $\req$ (km) & $8.7$ & $10.8$ & $12.8$ & $14.7$ & $16.1$  \\ %\hline
       Mass $M$ ($\msun$) & $1.1$ & $1.4$ & $1.6$ & $1.8$ & $2.0$  \\ %\hline
-      Inclination $i$ ($\degree$) & $11.6$ & $72.8$ & $80.8$ & $88.6$ & $89.5$ \\ %\hline
-      Spot colatitude $\thetas$ ($\degree$) & $2.8$ & $3.6$ & $5.4$ & $5.5$ & $9.4$ \\ %\hline %peak bf sm 4.4
-      Spot angular size $\rho$ ($\degree$) & $7.4$ & $8.4$ & $10.0$ & $11.4$ & $13.0$ \\ %\hline
+      Inclination $i$ ($\deg$) & $11.6$ & $72.8$ & $80.8$ & $88.6$ & $89.5$ \\ %\hline
+      Spot colatitude $\thetas$ ($\deg$) & $2.8$ & $3.6$ & $5.4$ & $5.5$ & $9.4$ \\ %\hline %peak bf sm 4.4
+      Spot angular size $\rho$ ($\deg$) & $7.4$ & $8.4$ & $10.0$ & $11.4$ & $13.0$ \\ %\hline
       Distance $D$ (kpc) & $2.1$ & $2.2$ & $2.5$ & $2.9$ & $3.0$ \\ \hline
       
       \multicolumn{6}{c}{Equatorial spot with only uniform priors} \\ %\hline
       Radius $\req$ (km) & $8.1$ & $8.2$ & $9.1$ & $10.8$ & $16.1$  \\ %\hline
       Mass $M$ ($\msun$) & $1.0$ & $1.0$ & $1.1$ & $1.4$ & $2.0$  \\ %\hline
-      Inclination $i$ ($\degree$) & $3.3$ & $3.7$ & $7.9$ & $18.1$ & $79.1$ \\ %\hline
-      Spot colatitude $\thetas$ ($\degree$) & $4.6$ & $4.8$ & $8.2$ & $73.5$ & $77.2$ \\ %\hline
-      Spot angular size $\rho$ ($\degree$) & $6.5$ & $8.7$ & $10.3$ & $11.6$ & $13.1$ \\ %\hline
+      Inclination $i$ ($\deg$) & $3.3$ & $3.7$ & $7.9$ & $18.1$ & $79.1$ \\ %\hline
+      Spot colatitude $\thetas$ ($\deg$) & $4.6$ & $4.8$ & $8.2$ & $73.5$ & $77.2$ \\ %\hline
+      Spot angular size $\rho$ ($\deg$) & $6.5$ & $8.7$ & $10.3$ & $11.6$ & $13.1$ \\ %\hline
       Distance $D$ (kpc) &  $2.0$ & $2.1$ & $2.5$ & $2.9$ & $3.0$ \\ \hline
       
       \multicolumn{6}{c}{Equatorial spot with non-uniform $i$ and $\thetas$ priors} \\ %\hline
       Radius $\req$ (km) & $8.2$ & $9.8$ & $10.7$ & $14.1$ & $16.1$  \\ %\hline
       Mass $M$ ($\msun$) & $1.1$ & $1.2$ & $1.5$ & $1.7$ & $2.0$  \\ %\hline
-      Inclination $i$ ($\degree$) & $2.3$ & $3.5$ & $5.5$ & $6.1$ & $67.1$ \\ %\hline
-      Spot colatitude $\thetas$ ($\degree$) & $4.0$ & $67.4$ & $77.4$ & $85.4$ & $89.3$ \\ %\hline
-      Spot angular size $\rho$ ($\degree$) & $7.2$ & $8.2$ & $9.9$ & $11.3$ & $13.5$ \\ %\hline
+      Inclination $i$ ($\deg$) & $2.3$ & $3.5$ & $5.5$ & $6.1$ & $67.1$ \\ %\hline
+      Spot colatitude $\thetas$ ($\deg$) & $4.0$ & $67.4$ & $77.4$ & $85.4$ & $89.3$ \\ %\hline
+      Spot angular size $\rho$ ($\deg$) & $7.2$ & $8.2$ & $9.9$ & $11.3$ & $13.5$ \\ %\hline
       Distance $D$ (kpc) & $2.1$ & $2.1$ & $2.5$ & $2.9$ & $3.0$ \\ 
 
 
